--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "vite": "^6.2.6"
   },
   "dependencies": {
+    "dotenv": "^17.2.0",
     "firebase": "^11.10.0",
+    "groq-sdk": "^0.26.0",
     "lottie-web": "^5.13.0",
     "svelte-spa-router": "^4.0.1"
   },
